# garden-core

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HEARTWARE_MANIFEST.md  README-dev.md  README.md  RELATIONAL_ALIGNMENT.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.changeset/: README.md  awareness-architecture.md  client-boundaries-theme-sync.md  dep-updates-march-2026.md  docs-firecircle-suite.md  fix-select-variant.md  gratiaos-scope-switch.md  hungry-windows-attend.md  pad-core-presence-kernel-dep.md  pad-core-realtime-bridge.md  playground-realtime-p2p.md  publish-metadata-refresh.md  seed-presence-kernel.md  server-firecircle-signal-hub.md  silent-lamps-cover.md  soften-seed-tokens.md  tokens-theme-refresh.md  ui-presence-kernel-deps.md  ui-style-polish.md  whispery-ui-primitives.md
.github/: dependabot.yml  labeler.yml
.github/workflows/: auto-label.yml  ci.yml  deploy-cuib-pi.yml  pr-housekeeping.yml  publish.yml  (+1 more)
anchors/: 2025-10-03-garden-m3.md
cuib-quiet-node/: Cargo.toml  README.md
cuib-quiet-node/assets/: README.md
cuib-quiet-node/scripts/: fetch-yamnet-assets.sh  setup-gh-runner-unattended.sh  setup-tflite-runtime-pi.sh
cuib-quiet-node/src/: buffer.rs  fade.rs  inference.rs  main.rs
docs/: animal-presence-layer.md  human-presence-layer.md  stack-reference.md
playground/: CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
scripts/: check-changeset.mjs  check-workspace-deps.mjs
server/: .env.example  CHANGELOG.md  README.md  package.json  tsconfig.json
(+79 files in other folders)
