[package]
name = "cuib-quiet-node"
version = "0.1.0"
edition = "2024"

[features]
default = []
tflite-inference = ["tflite-runtime-v2"]
tflite-runtime-v2 = ["dep:tflite-dyn"]
tflite-legacy = ["dep:tflite"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
cpal = "0.15"
ctrlc = "3.4"
csv = "1.4"
tflite = { version = "0.9.8", optional = true }
tflite-dyn = { version = "0.1.1", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
